fix(docs): added admin tag prefix for update class details and toggle class enable question
