# docs/swagger.json
@@ -334,7 +334,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Admin/Class Category"
+                    "Admin/ClassCategory"
                 ],
                 "summary": "Update class category name",
                 "parameters": [
@@ -398,7 +398,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Admin/Class Registration"
+                    "Admin/ClassRegistration"
                 ],
                 "summary": "Reset user's cancellation quota",
                 "parameters": [
@@ -440,7 +440,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Admin/Class Registration"
+                    "Admin/ClassRegistration"
                 ],
                 "summary": "Delete a user's class registration",
                 "parameters": [
@@ -494,7 +494,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Admin/Class Session"
+                    "Admin/ClassSession"
                 ],
                 "summary": "Create a new class session",
                 "parameters": [
@@ -542,7 +542,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Admin/Class Session"
+                    "Admin/ClassSession"
                 ],
                 "summary": "Delete a class session",
                 "parameters": [
@@ -582,7 +582,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Admin/Class Session"
+                    "Admin/ClassSession"
                 ],
                 "summary": "Update location for a class session",
                 "parameters": [
@@ -638,7 +638,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Admin/Class Session"
+                    "Admin/ClassSession"
                 ],
                 "summary": "Update max capacity for a class session",
                 "parameters": [
@@ -751,7 +751,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Class"
+                    "Admin/Class"
                 ],
                 "summary": "Update class cover image",
                 "parameters": [
@@ -817,7 +817,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Class"
+                    "Admin/Class"
                 ],
                 "summary": "Toggle EnableQuestion status",
                 "parameters": [
@@ -960,7 +960,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Admin/Sub Question Choice"
+                    "Admin/SubQuestionChoice"
                 ],
                 "summary": "Create a new sub-question choice",
                 "parameters": [
@@ -1133,7 +1133,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Class Registration"
+                    "ClassRegistration"
                 ],
                 "summary": "Get user registrations",
                 "parameters": [
@@ -1176,12 +1176,12 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Class Registration"
+                    "ClassRegistration"
                 ],
                 "summary": "Create a class registration",
                 "parameters": [
                     {
-                        "description": "Create Class Registration Request Body",
+                        "description": "Create ClassRegistration Request Body",
                         "name": "body",
                         "in": "body",
                         "required": true,
@@ -1224,7 +1224,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Class Registration"
+                    "ClassRegistration"
                 ],
                 "summary": "Cancel a class registration",
                 "parameters": [
